# Alienor

./: README.md  build_release.bat  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs  mpv.rs
src-tauri/templates/: package.json  status.html
