[package]
name = "alien"
version = "1.0.1"
description = "A video synchronization tool for animation reference"
authors = ["Cautioned"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alien_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.8", features = ["default", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0"
libmpv2 = { version = "4.1.0", default-features = false, features = ["protocols", "render"] }
webbrowser = "0.8"
chrono = "0.4"
portpicker = "0.1"
tauri-plugin-shell = "2"
once_cell = "1.19"

[package.metadata.libmpv2]
# Use our local lib directory with the expected 64-bit subdirectory
library_path = "lib/64"
pkg_config_path = "lib/64"

[profile.release]
panic = "abort"     # Strip expensive panic clean-up logic
codegen-units = 1   # Compile crates one after another so the compiler can optimize better
lto = true         # Enables link to optimizations
opt-level = "s"    # Optimize for binary size
strip = true       # Remove debug symbols

# Development profile - we can optimize this too
[profile.dev]
opt-level = 0      # Basic optimizations without significantly impacting compile time
debug = true       # Keep debug info for development

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
